# ros2_notes_adi

./: README.md  ros1v2.md
src/num_topic/: CMakeLists.txt  package.xml
src/num_topic/launch/: num_launch.py
src/num_topic/src/: number_publisher.cpp  number_subscriber.cpp
